-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P2
-
Affects Version/s: 9
-
Component/s: hotspot
-
b92
-
Verified
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8143472 | emb-9 | Nils Eliasson | P2 | Resolved | Fixed | team |
#
# SIGSEGV (0xb) at pc=0x00007fb853ec3df6, pid=5970, tid=5973
#
# JRE version: Java(TM) SE Runtime Environment (9.0) (build 1.9.0-internal-fastdebug-20151021224241.drlong.hs-comp-b00)
# Java VM: Java HotSpot(TM) 64-Bit Server VM (1.9.0-internal-fastdebug-20151021224241.drlong.hs-comp-b00, mixed mode, tiered, jvmci, jvmci compiler, g1 gc, linux-amd64)
# Problematic frame:
# V [libjvm.so+0x7f9df6] DirectivesStack::getMatchingDirective(methodHandle, AbstractCompiler*)+0x776
#
# SIGSEGV (0xb) at pc=0x00007fb853ec3df6, pid=5970, tid=5973
#
# JRE version: Java(TM) SE Runtime Environment (9.0) (build 1.9.0-internal-fastdebug-20151021224241.drlong.hs-comp-b00)
# Java VM: Java HotSpot(TM) 64-Bit Server VM (1.9.0-internal-fastdebug-20151021224241.drlong.hs-comp-b00, mixed mode, tiered, jvmci, jvmci compiler, g1 gc, linux-amd64)
# Problematic frame:
# V [libjvm.so+0x7f9df6] DirectivesStack::getMatchingDirective(methodHandle, AbstractCompiler*)+0x776
#
- backported by
-
JDK-8143472 SEGV in DirectivesStack::getMatchingDirective
-
- Resolved
-
- relates to
-
JDK-8145328 SEGV in DirectivesStack::getMatchingDirective
-
- Closed
-