8140343: SEGV in DirectivesStack::getMatchingDirective

Could not match JVMCI compiler

Reviewed-by: kvn